Added ad sense code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <title>Ads Test</title>
-  
+  <script data-ad-client="ca-pub-6309326554991961" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 </head>
 
